Fix #1402 remove bottom -100px causing footer to overlap pay button on smaller devices

--- a/subscribie/themes/theme-jesmond/static/style.css
+++ b/subscribie/themes/theme-jesmond/static/style.css
@@ -241,7 +241,9 @@ body {
 
 .footer {
   position: absolute;
-  bottom: -100px;
+  /* Do not use bottom -100px without testing on smaller devices first
+   * https://github.com/Subscribie/subscribie/issues/1402
+   * */
   width: 100%;
 }
 
